# django-quill-editor

./: README.md  pyproject.toml  setup.py
django_quill/: config.py  fields.py  forms.py  quill.py  widgets.py
django_quill/static/django_quill/: django_quill.css  django_quill.js
django_quill/templates/django_quill/: widget.html
docs/: index.rst
