[tool.poetry]
name = "django-quill-editor"
version = "0.1.0"
description = ""
authors = ["lhy <dev@lhy.kr>"]
packages = [
    { include = "django_quill" },
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0.3"
pytest = "^7.0.1"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
coverage = "^6.3.2"
codecov = "^2.0.16"
tox = "^3.14.5"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"
setuptools = "^45.2.0"
wheel = "^0.34.2"
notebook = "^6.0.3"
django-extensions = "^2.2.8"

# Doc
Sphinx = "^3.1.1"
recommonmark = "^0.6.0"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
